--- a/style.css
+++ b/style.css
@@ -1,5 +1,15 @@
+@import url('https://fonts.googleapis.com/css?family=Caveat');
+
 h1, h2 {
   font-family: Lato;
+}
+
+html, body {
+  height: 100%;
+  padding: 0;
+  margin: 0;
+  background-image: url(https://res.cloudinary.com/lazydayed/image/upload/v1553020925/annieandadam/seamless-wood-texture-5.jpg);
+  background-size: 100vw;
 }
 
 .app {
@@ -13,14 +23,35 @@ h1, h2 {
 }
 
 .picture {
- padding: 1rem;
+  margin: 1rem;
     font-size: 14px;
     font-weight: bold;
     text-transform: uppercase;
-    color: #929796;
-    background-color: #333;
-    border-radius: 5px;
+    color: #333333;   
+ 
+   
     position: relative;
+}
+
+.potrait {
+    grid-row-end: span 2;    
+}
+
+.pic-inner {
+  background-color: white;
+  border-radius: 3px;  
+  padding: 1rem;
+  width: 100%;
+}
+
+.picture  img {
+  width: 100%;
+}
+.footer-label {
+  text-align: center;
+  background: white;
+ font-family: 'Caveat', cursive;
+  padding: 1rem 0 0 0;
 }
 
 .pin {
@@ -28,7 +59,7 @@ h1, h2 {
   background-repeat: no-repeat;
   background-size: cover;
   position: absolute;
-  top: 1rem;
+  top: 0.6rem;
   left: 47%;
   width: 18px;
   height: 18px;
